# noteUtils

./: .gitignore  CMakeLists.txt  README.md  noteMaker.cpp  readmeMaker.cpp
.metadata/: tags.md
bash/: mknote  readmeMaker
src/: StringManipulators.cpp  StringManipulators.h  fileWatcher.cpp  fileWatcher.h  noteMaker.cpp  readmeMaker.cpp  unitTests.cpp
